# nats-tools

./: README.md  pyproject.toml  services-DRAFT.md  services-specs.json
.github/workflows/: ci.yml
docker/nats-server/: Dockerfile  README.md
investigations/: .gitignore  reconnect.py
sandbox/: .gitignore  env.sh
scripts/: install-nats-account-server.sh  install-nats-cli.sh  install-nats-kafka.sh  install-nats-server.sh  install-nats-top.sh  install-nsc.sh
src/nats_tools/: natsd.py
src/nats_tools/auth/: README.md  __init__.py  accounts.py  operators.py
src/nats_tools/auth/providers/: azure.py  client.py  local.py  nebula.py  nkey.py  oidc.py  protocol.py
src/nats_tools/client/: client.py
src/nats_tools/jwts/: README.md  __init__.py  api.py  creds.py  errors.py  types.py
src/nats_tools/monitoring/: http.py  nats.py  protocol.py
src/nats_tools/nkeys/: README.md  __init__.py  algorithms.py  api.py  constants.py  crc.py  encoding.py  errors.py  keypair.py  kp.py  parser.py
src/nats_tools/oidc/: README.md  auth.py
src/nats_tools/scratch/: README.md  client.py  concurrency.py  errors.py
src/nats_tools/scratch/adapters/generators/: nuid.py
src/nats_tools/scratch/interfaces/: connection.py  message.py  mux.py  observable.py  observer.py  parser.py  session.py  transport.py
src/nats_tools/scratch/protocol/: commands.py  constants.py  errors.py  headers.py  messages.py
src/nats_tools/scratch/services/: reader.py  writer.py
src/nats_tools/testing/: README.md  fixtures.py
tests/: test_decorator.py  test_fixture.py
(+11 files in other folders)
